# json2shell

./: CMakeLists.txt  README.md  emitMKV.c  emitShell.c  index.md  json2shell.c  json2shell.h  rename.c
examples/: linkByGenre.sh
